add deprecation note to udf guide

--- a/docs/cudf/source/user_guide/guide-to-udfs.ipynb
+++ b/docs/cudf/source/user_guide/guide-to-udfs.ipynb
@@ -1712,6 +1712,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8ab745d-1369-4400-88c9-23b3bd8eed66",
+   "metadata": {},
+   "source": [
+    "##### **Note: `DataFrame.apply_rows` is now deprecated and will be removed in a future release.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "37c93c69-22d1-430f-8f02-67eef27094f8",
