--- a/docs/cudf/source/user_guide/guide-to-udfs.ipynb
+++ b/docs/cudf/source/user_guide/guide-to-udfs.ipynb
@@ -1716,7 +1716,7 @@
    "id": "b8ab745d-1369-4400-88c9-23b3bd8eed66",
    "metadata": {},
    "source": [
-    "##### **Note: `DataFrame.apply_rows` is now deprecated and will be removed in a future release.**"
+    "#### **Note: `DataFrame.apply_rows` is now deprecated and will be removed in a future release.**"
    ]
   },
   {
@@ -2972,7 +2972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
