--- a/docs/cudf/source/user_guide/10min.ipynb
+++ b/docs/cudf/source/user_guide/10min.ipynb
@@ -115,8 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/raid/envs/cudfdev/lib/python3.13/site-packages/numba_cuda/numba/cuda/dispatcher.py:686: NumbaPerformanceWarning: \u001b[1mGrid size 1 will likely result in GPU under-utilization due to low occupancy.\u001b[0m\n",
-      "  warn(NumbaPerformanceWarning(msg))\n"
+      ""
      ]
     }
    ],
@@ -5714,10 +5713,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/raid/envs/cudfdev/lib/python3.13/site-packages/distributed/node.py:187: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 33139 instead\n",
-      "  warnings.warn(\n"
+      ""
      ]
     }
    ],
@@ -5868,12 +5864,12 @@
       "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|    0   N/A  N/A         3388435      C   ...pgali/envs/cudfdev/bin/python       1236MiB |\n",
-      "|    0   N/A  N/A         3389287      C   ...pgali/envs/cudfdev/bin/python        542MiB |\n",
-      "|    0   N/A  N/A         3390417      C   ...pgali/envs/cudfdev/bin/python        766MiB |\n",
-      "|    1   N/A  N/A         3389290      C   ...pgali/envs/cudfdev/bin/python        578MiB |\n",
-      "|    2   N/A  N/A         3389296      C   ...pgali/envs/cudfdev/bin/python        632MiB |\n",
-      "|    3   N/A  N/A         3389297      C   ...pgali/envs/cudfdev/bin/python        560MiB |\n",
+      "|    0   N/A  N/A         3388435      C   /envs/cudfdev/bin/python       1236MiB |\n",
+      "|    0   N/A  N/A         3389287      C   /envs/cudfdev/bin/python        542MiB |\n",
+      "|    0   N/A  N/A         3390417      C   /envs/cudfdev/bin/python        766MiB |\n",
+      "|    1   N/A  N/A         3389290      C   /envs/cudfdev/bin/python        578MiB |\n",
+      "|    2   N/A  N/A         3389296      C   /envs/cudfdev/bin/python        632MiB |\n",
+      "|    3   N/A  N/A         3389297      C   /envs/cudfdev/bin/python        560MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -6025,16 +6021,16 @@
       "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|    0   N/A  N/A         3388435      C   ...pgali/envs/cudfdev/bin/python       1236MiB |\n",
-      "|    0   N/A  N/A         3389287      C   ...pgali/envs/cudfdev/bin/python        542MiB |\n",
-      "|    0   N/A  N/A         3390417      C   ...pgali/envs/cudfdev/bin/python        922MiB |\n",
-      "|    0   N/A  N/A         3391195      C   ...pgali/envs/cudfdev/bin/python        504MiB |\n",
-      "|    1   N/A  N/A         3389290      C   ...pgali/envs/cudfdev/bin/python        578MiB |\n",
-      "|    1   N/A  N/A         3391197      C   ...pgali/envs/cudfdev/bin/python        540MiB |\n",
-      "|    2   N/A  N/A         3389296      C   ...pgali/envs/cudfdev/bin/python        632MiB |\n",
-      "|    2   N/A  N/A         3391202      C   ...pgali/envs/cudfdev/bin/python        504MiB |\n",
-      "|    3   N/A  N/A         3389297      C   ...pgali/envs/cudfdev/bin/python        560MiB |\n",
-      "|    3   N/A  N/A         3391205      C   ...pgali/envs/cudfdev/bin/python        468MiB |\n",
+      "|    0   N/A  N/A         3388435      C   /envs/cudfdev/bin/python       1236MiB |\n",
+      "|    0   N/A  N/A         3389287      C   /envs/cudfdev/bin/python        542MiB |\n",
+      "|    0   N/A  N/A         3390417      C   /envs/cudfdev/bin/python        922MiB |\n",
+      "|    0   N/A  N/A         3391195      C   /envs/cudfdev/bin/python        504MiB |\n",
+      "|    1   N/A  N/A         3389290      C   /envs/cudfdev/bin/python        578MiB |\n",
+      "|    1   N/A  N/A         3391197      C   /envs/cudfdev/bin/python        540MiB |\n",
+      "|    2   N/A  N/A         3389296      C   /envs/cudfdev/bin/python        632MiB |\n",
+      "|    2   N/A  N/A         3391202      C   /envs/cudfdev/bin/python        504MiB |\n",
+      "|    3   N/A  N/A         3389297      C   /envs/cudfdev/bin/python        560MiB |\n",
+      "|    3   N/A  N/A         3391205      C   /envs/cudfdev/bin/python        468MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
