Try changing all zip calls to strict

--- a/docs/cudf/source/user_guide/10min.ipynb
+++ b/docs/cudf/source/user_guide/10min.ipynb
@@ -114,9 +114,7 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      ""
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -1961,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4ae70724",
    "metadata": {},
    "outputs": [
@@ -1982,7 +1980,7 @@
    ],
    "source": [
     "arrays = [[\"a\", \"a\", \"b\", \"b\"], [1, 2, 3, 4]]\n",
-    "tuples = list(zip(*arrays))\n",
+    "tuples = list(zip(*arrays, strict=True))\n",
     "idx = cudf.MultiIndex.from_tuples(tuples)\n",
     "idx"
    ]
