--- a/docs/cudf/source/user_guide/guide-to-udfs.ipynb
+++ b/docs/cudf/source/user_guide/guide-to-udfs.ipynb
@@ -1823,13 +1823,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "90cbcd85",
    "metadata": {},
    "outputs": [],
    "source": [
     "def conditional_add(x, y, out):\n",
-    "    for i, (a, e) in enumerate(zip(x, y)):\n",
+    "    for i, (a, e) in enumerate(zip(x, y, strict=True)):\n",
     "        if a > 0:\n",
     "            out[i] = a + e\n",
     "        else:\n",
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "befd8333",
    "metadata": {},
    "outputs": [
@@ -2056,7 +2056,7 @@
    ],
    "source": [
     "def gpu_add(a, b, out):\n",
-    "    for i, (x, y) in enumerate(zip(a, b)):\n",
+    "    for i, (x, y) in enumerate(zip(a, b, strict=True)):\n",
     "        out[i] = x + y\n",
     "\n",
     "\n",
