Don't enforce the rule in the UDFs notebook

--- a/docs/cudf/source/user_guide/guide-to-udfs.ipynb
+++ b/docs/cudf/source/user_guide/guide-to-udfs.ipynb
@@ -1829,7 +1829,7 @@
    "outputs": [],
    "source": [
     "def conditional_add(x, y, out):\n",
-    "    for i, (a, e) in enumerate(zip(x, y, strict=True)):\n",
+    "    for i, (a, e) in enumerate(zip(x, y)):\n",
     "        if a > 0:\n",
     "            out[i] = a + e\n",
     "        else:\n",
@@ -2056,7 +2056,7 @@
    ],
    "source": [
     "def gpu_add(a, b, out):\n",
-    "    for i, (x, y) in enumerate(zip(a, b, strict=True)):\n",
+    "    for i, (x, y) in enumerate(zip(a, b)):\n",
     "        out[i] = x + y\n",
     "\n",
     "\n",
