--- a/docs/cudf/source/user_guide/10min.ipynb
+++ b/docs/cudf/source/user_guide/10min.ipynb
@@ -1982,7 +1982,7 @@
    ],
    "source": [
     "arrays = [[\"a\", \"a\", \"b\", \"b\"], [1, 2, 3, 4]]\n",
-    "tuples = list(zip(*arrays))\n",
+    "tuples = list(zip(*arrays, strict=True))\n",
     "idx = cudf.MultiIndex.from_tuples(tuples)\n",
     "idx"
    ]
